--- a/css/styles.css
+++ b/css/styles.css
@@ -123,6 +123,7 @@ h1, h2, h3, p {
 
 .hero {
     background: var(--second-background-color);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)) , url(../images/bgi-hero.jpg);
     text-align: center;
     padding-top: 200px;
     padding-bottom: 200px;
@@ -261,12 +262,32 @@ h1, h2, h3, p {
     line-height: 1.18;
      /* identical to box height */
     text-align: center;
+    margin-bottom: 16px;
     
 }
+.clients-title {
+    color: var(--title-text-color);
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+    
+    margin-bottom: 50px;
+}
+.clients-list {
+    display: flex;   
+}
+
 .footer {
     background-color: var(--second-background-color);
     padding-top: 60px;
     padding-bottom: 60px;
+}
+.footer-section {
+    display: flex;
+}
+.footer-left {
+    margin-right: 70px;
 }
 .logo-footer {
     color: var(--primary-white-color);
@@ -293,6 +314,21 @@ h1, h2, h3, p {
 }
 .footer-list:not(:last-child) {
     margin-bottom: 9px;
+}
+.social {
+    padding-top: 12px;
+    padding-bottom: 40px;
+}
+.social-text {
+    
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-transform: uppercase;
+
+    color: var(--primary-background-color);
+
+    margin-bottom: 20px;
 }
 
 .link-address:hover,
@@ -339,11 +375,14 @@ h1, h2, h3, p {
 .project-poster {
     background-color: var(--primary-white-color);
     display: block;
-
-}
-.project-poster {
     margin-right: 30px;
     margin-bottom: 30px;
+
+}
+.project-poster:hover,
+.project-poster:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+
 }
 .project-poster:nth-child(3n) {
     margin-right: 0;
