--- a/css/styles.css
+++ b/css/styles.css
@@ -366,6 +366,7 @@ h1, h2, h3, p {
 .btn:focus {
     background-color: var(--accent-color);
     color: var(--primary-white-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .project-list {
     display: flex;
