--- a/css/styles.css
+++ b/css/styles.css
@@ -220,6 +220,7 @@ h1, h2, h3, p {
     background-size: auto;
     background-position: center;
     background-repeat: no-repeat;
+    border-radius: 4px;
 }
 
 .antenna::before {
