--- a/css/styles.css
+++ b/css/styles.css
@@ -308,7 +308,6 @@ h1, h2, h3, p {
     
 }
 
-
 .clients-title {
     color: var(--title-text-color);
     font-weight: 700;
@@ -320,6 +319,45 @@ h1, h2, h3, p {
 }
 .clients-list {
     display: flex;   
+}
+
+.client-logo {
+    width: 170px;
+    height: 92px;
+    border: 1px solid #AFB1B8;
+    border-radius: 4px; 
+    margin-right: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.client-logo:last-child {
+    margin-right: 0;
+}
+
+.client-logo:hover,
+.client-logo:focus {
+    border: 1px solid var(--accent-color);
+}
+
+.client-logo:hover .client-icon,
+.client-logo:focus .client-icon {
+    fill: var(--accent-color);
+}
+
+.link.client {
+    width: 100%;
+    height: 100%;
+    color: #AFB1B8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.client-icon {
+    fill: currentColor;
 }
 
 .footer {
