--- a/css/styles.css
+++ b/css/styles.css
@@ -143,6 +143,7 @@ h1, h2, h3, p {
     text-align: center;
     padding-top: 200px;
     padding-bottom: 200px;
+    background-size: 1600px;
 }
 
 .hero-title {
